# src/main/scala/com/fourthwall/googlemembersapi/api/dto/MemberListDto.scala
@@ -3,7 +3,7 @@ package com.fourthwall.googlemembersapi.api.dto
 case class MemberListDto(
   kind: String,
   etag: String,
-  nextPageToken: String,
+  nextPageToken: Option[String],
   pageInfo: PageInfoDto,
   items: List[MemberDto]
 )
