# src/main/scala/com/fourthwall/googlemembersapi/api/dto/MembershipsDetailsDto.scala
@@ -5,5 +5,5 @@ case class MembershipsDetailsDto(
   highestAccessibleLevelDisplayName: String,
   accessibleLevels: List[String],
   membershipsDuration: MembershipsDurationDto,
-  membershipsDurationAtLevel: List[MembershipsDurationAtLevelDto]
+  membershipsDurationAtLevels: List[MembershipsDurationAtLevelDto]
 )
